# PactMesh

./: .gitignore  CONTRIBUTING.md  CONTRIBUTING_zh.md  Cargo.toml  README.md  README_CN.md  README_EN.md  THIRD_PARTY_NOTICES.md  deploy.md  deploy_CN.md
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  core.yml  gui.yml  mobile.yml  ohos.yml  release.yml  test.yml  windows-x86_64.yml
android/: .gitignore  build-native.sh  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/gradle/: libs.versions.toml
easytier/: Cargo.toml
easytier/benches/: trust_bench.rs
easytier/src/: core.rs  easytier-cli.rs  launcher.rs  lib.rs
easytier/tests/: acl_e2e.rs  borrowed_relay_e2e_test.rs  config_relay_serving_test.rs  handshake_proto_test.rs  hosts_writer_test.rs  lan_discovery_test.rs  lan_recovery_e2e_test.rs  lan_recovery_test.rs  magicdns_e2e.rs  multi_domain_e2e.rs  recovery_e2e_test.rs  relay_proof_test.rs  revoke_e2e.rs  test_harness.rs  three_node_e2e.rs  trust.rs  trust_accept_invite_test.rs  trust_cli_daemon_happy_path.rs  trust_config_load_test.rs  trust_context_test.rs  trust_create_domain_test.rs  trust_create_network_test.rs  trust_disable_test.rs  trust_envelope_test.rs  trust_hostname_test.rs  trust_invite_test.rs  trust_join_manage_test.rs  trust_list_domains_test.rs  trust_list_members_test.rs  trust_peer_hint_test.rs  trust_revoke_test.rs  trust_show_device_test.rs  wire_member_cert_test.rs  wire_meta_join_test.rs  wire_network_state_test.rs
pactmesh/: Cargo.toml  build.rs
pactmesh-android/: Cargo.toml
pactmesh-android/src/: lib.rs
pactmesh-rpc-build/: Cargo.toml  README.md
pactmesh-rpc-build/src/: lib.rs
pactmesh/benches/: trust_bench.rs
pactmesh/docs/: credential_peer.md
pactmesh/locales/: app.yml
pactmesh/src/: core.rs  instance_manager.rs  launcher.rs  lib.rs  pactmesh-core.rs  pactmesh.rs  secret_seal.rs  tray.rs
pactmesh/tests/: acl_e2e.rs  borrowed_relay_e2e_test.rs  config_relay_serving_test.rs  handshake_proto_test.rs  hosts_writer_test.rs  lan_discovery_test.rs  lan_recovery_e2e_test.rs  lan_recovery_test.rs  magicdns_e2e.rs  multi_domain_e2e.rs  recovery_e2e_test.rs  relay_proof_test.rs  revoke_e2e.rs  test_harness.rs  three_node_e2e.rs  trust.rs  trust_accept_invite_test.rs  trust_capability_test.rs  trust_cli_daemon_happy_path.rs  trust_config_load_test.rs  trust_context_test.rs  trust_create_domain_test.rs  trust_create_network_test.rs  trust_disable_test.rs  trust_envelope_test.rs  trust_external_test.rs  trust_hostname_test.rs  trust_invite_test.rs  (+9 more)
script/: install.cmd  install.ps1  install.sh  pactmesh.iss  test-cli-multi-instance.sh
(+265 files in other folders)
