[workspace]
resolver = "2"
members = [
    "easytier",
    "easytier-rpc-build",
]
default-members = ["easytier"]

[workspace.package]
edition = "2024"
rust-version = "1.95"

[profile.dev]
panic = "unwind"
debug = 2

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
opt-level = 3
strip = true
