[package]
name = "pactmesh-android"
version = "0.5.0-beta.8"
edition.workspace = true
rust-version.workspace = true
license = "LGPL-3.0-only"
publish = false

[lib]
name = "pactmesh_android"
crate-type = ["cdylib"]

[dependencies]
pactmesh = { path = "../pactmesh", default-features = false, features = [
    "tun",
    "smoltcp",
    "magic-dns",
    "wireguard",
    "websocket",
    "quic",
    "zstd",
] }

# The crate body is `#![cfg(target_os = "android")]`, so on every other host this
# builds to an empty rlib and `cargo clippy --workspace` stays clean.
[target.'cfg(target_os = "android")'.dependencies]
anyhow = "1.0"
jni = "0.21"
tokio = { version = "1", features = ["rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = "1"
